# cpp-async-rpc

./: .gitignore  .gitmodules  CPPLINT.cfg  README.md  ash.h  component.mk  doxygen.cfg  fix_copyright.py  main.cpp  meson.build
ash/: binary_codecs.h  codes.h  config.h  dynamic_base_class.h  dynamic_class.h  io_adapters.h  iostream_adapters.h  metadata.h  mpt.h  preprocessor.h  registration.h  registry.h  serializable.h  serializable_base.h  singleton.h  static_object.h  status.h  traits.h  type_hash.h  vector_assoc.h
doc/: Doxyfile.in  meson.build
examples/: CPPLINT.cfg  main.cpp  meson.build  module1.cpp  module1.h  module2.cpp  module2.h  modules.cpp
examples/async_basic/: async_basic.cpp  meson.build
examples/async_events/: async_events.cpp  meson.build
examples/rpc_basic/: meson.build  rpc_basic.cpp
examples/serializable_aggregate_is_tuple/: meson.build  serializable_aggregate_is_tuple.cpp
examples/serializable_basic/: meson.build  serializable_basic.cpp
examples/serializable_explicit/: meson.build  serializable_explicit.cpp
examples/serializable_simple/: meson.build  serializable_simple.cpp
include/: ash.h  meson.build
include/ash/: binary_codecs.h  client.h  config.h  connection.h  const_char_ptr_compare.h  dynamic_base_class.h  enum.h  errors.h  highway_hash.h  interface.h  interfaces.h  io.h  io_adapters.h  iostream_adapters.h  mpt.h  packet_codecs.h  packet_protocols.h  preprocessor.h  registry.h  serializable.h  serializable_base.h  singleton.h  status.h  status_or.h  string_adapters.h  traits.h  type_hash.h
include/ash/container/: flat_map.h  flat_set.h
include/ash/container/detail/: flat_tree.h
include/ash/linux/: connection.h
include/ash/posix/: connection.h  io.h
include/ash/testing/: static_checks.h
include/ash/traits/: container_traits.h  serialization_traits.h  trait_factories.h  type_traits.h
src/: CPPLINT.cfg  ash.h  main.cpp  meson.build
src/arpc/: address.cpp  address.h  address_resolver.cpp  address_resolver.h  awaitable.cpp  awaitable.h  binary_codecs.cpp  binary_codecs.h  channel.cpp  channel.h  client.h  config.h  connection.cpp  connection.h  context.cpp  context.h  dynamic_base_class.cpp  dynamic_base_class.h  enum.h  errors.cpp  errors.h  executor.cpp  executor.h  file.cpp  file.h  flag.cpp  flag.h  function.h  future.cpp  future.h  highway_hash.cpp  highway_hash.h  interface.h  io_adapters.cpp  io_adapters.h  iostream_adapters.cpp  iostream_adapters.h  message_defs.h  mpt.h  mutex.cpp  (+27 more)
src/arpc/container/: flat_map.h  flat_set.h
src/arpc/container/detail/: flat_tree.h
src/arpc/testing/: static_checks.h
src/arpc/traits/: container_traits.h  serialization_traits.h  trait_factories.h  type_traits.h
src/ash/: address.cpp  address.h  address_info.cpp  address_info.h  address_resolver.cpp  address_resolver.h  awaitable.cpp  awaitable.h  binary_codecs.cpp  binary_codecs.h  channel.cpp  channel.h  client.h  config.h  connection.cpp  connection.h  connection_common.h  const_char_ptr_compare.cpp  context.cpp  context.h  dynamic_base_class.cpp  dynamic_base_class.h  enum.h  errors.cpp  errors.h  executor.cpp  executor.h  file.cpp  file.h  flag.cpp  flag.h  future.cpp  future.h  highway_hash.cpp  highway_hash.h  interface.h  io.cpp  io.h  io_adapters.cpp  io_adapters.h  (+34 more)
src/ash/common/: connection.cpp  connection.h  io.h
src/ash/container/: flat_map.h  flat_set.h
src/ash/container/detail/: flat_tree.h
src/ash/posix/: connection.cpp  connection.h  io.cpp  io.h
src/ash/testing/: static_checks.h
src/ash/traits/: container_traits.h  serialization_traits.h  trait_factories.h  type_traits.h
src/lasr/: address.cpp  address.h  address_resolver.cpp  address_resolver.h  awaitable.cpp  awaitable.h  binary_codecs.cpp  binary_codecs.h  channel.cpp  channel.h  client.h  config.h  connection.cpp  connection.h  context.cpp  context.h  dynamic_base_class.cpp  dynamic_base_class.h  enum.h  errors.cpp  errors.h  executor.cpp  executor.h  file.cpp  file.h  flag.cpp  flag.h  future.cpp  future.h  highway_hash.cpp  highway_hash.h  interface.h  io_adapters.cpp  io_adapters.h  iostream_adapters.cpp  iostream_adapters.h  message_defs.h  mpt.h  mutex.cpp  mutex.h  (+24 more)
src/lasr/container/: flat_map.h  flat_set.h
src/lasr/container/detail/: flat_tree.h
src/lasr/testing/: static_checks.h
src/lasr/traits/: container_traits.h  serialization_traits.h  trait_factories.h  type_traits.h
subprojects/: .gitignore  catch.wrap  catch2.wrap
test/: awaitable_test.cpp  flag_test.cpp  meson.build  mutex_test.cpp  type_hash_test.cpp
test/container/: flat_map_test.cpp  flat_multimap_test.cpp  flat_multiset_test.cpp  flat_set_test.cpp  test_flat_map.cpp  test_flat_multimap.cpp  test_flat_multiset.cpp  test_flat_set.cpp
test/traits/: container_traits_test.cpp  serialization_traits_test.cpp  trait_factories_test.cpp  type_traits_test.cpp
